Overflow css bug fix 1

--- a/public/include/style.css
+++ b/public/include/style.css
@@ -51,8 +51,7 @@ button {
   margin: 0 auto;
   color: white;
   text-align: center;
-  overflow-y: scroll;
-}
+ }
 
 .ribbon {
   width: 90%;
